samples/lab6-final/07-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: devops-lab
  labels: { app: worker }
spec:
  replicas: 1
  selector:
    matchLabels: { app: worker }
  template:
    metadata:
      labels: { app: worker }
    spec:
      containers:
        - name: worker
          image: usuario/flaskapi:1.0    # misma imagen con Celery
          command: ["sh","-lc"]
          args:
            - |
              celery -A app.celery worker --loglevel=INFO
          readinessProbe:
            exec: { command: ["sh","-lc","echo ok"] }
            initialDelaySeconds: 5
            periodSeconds: 5
