samples/lab6-final/05-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: devops-lab
  labels: { app: redis }
spec:
  replicas: 1
  selector:
    matchLabels: { app: redis }
  template:
    metadata:
      labels: { app: redis }
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
          readinessProbe:
            tcpSocket: { port: 6379 }
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: devops-lab
spec:
  selector: { app: redis }
  ports:
    - port: 6379
      targetPort: 6379
