samples/lab6-final/09-nodeport-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-nodeport
  namespace: devops-lab
spec:
  type: NodePort
  selector: { app: api }
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30080
